...
  'address_form_save_cta': 'place_form_save_cta',
  'biometric_unlock_use_password_link': 'biometric_unlock_use_security_link',
  'capture_location_address_card': 'capture_place_summary_card',
  'capture_location_back': 'capture_place_back',
  'capture_location_gps_denied': 'capture_place_signal_denied',
  'capture_location_gps_denied_cta': 'capture_place_signal_denied_cta',
  'capture_location_map': 'capture_place_map',
  'capture_location_my_location': 'capture_place_my_place',
  'capture_location_pin': 'capture_place_pin',
  'capture_location_pin_callout': 'capture_place_pin_callout',
  'capture_location_pin_cta': 'capture_place_pin_cta',
  'capture_location_root': 'capture_place_root',
  'capture_location_zoom_in': 'capture_place_zoom_in',
  'capture_location_zoom_out': 'capture_place_zoom_out',
  'chat_detail_avatar': 'conversation_detail_avatar',
  'chat_detail_back_button': 'conversation_detail_back_button',
  'chat_detail_date_separator': 'conversation_detail_date_separator',
  'chat_detail_message_delivered': 'conversation_detail_message_delivered',
  'chat_detail_message_failed': 'conversation_detail_message_failed',
  'chat_detail_message_list': 'conversation_detail_message_list',
  'chat_detail_message_read': 'conversation_detail_message_read',
  'chat_detail_message_sending': 'conversation_detail_message_sending',
  'chat_detail_message_sent': 'conversation_detail_message_sent',
  'chat_detail_offer_only_one_note': 'conversation_detail_offer_only_one_note',
  'chat_detail_resolution_retry': 'conversation_detail_resolution_retry',
  'chat_detail_root': 'conversation_detail_root',
  'chat_dm_fee_banner': 'conversation_dm_fee_banner',
  'chat_dm_fee_banner_dismiss': 'conversation_dm_fee_banner_dismiss',
  'chat_dm_order_picked_button': 'conversation_dm_order_picked_button',
  'chat_history_error': 'conversation_history_error',
...
  'address_form_building',
  'address_form_cod_phone',
  'address_form_delivery_notes',
  'address_form_floor_apt',
  'address_form_label',
  'cancellation_other_field',
  'chat_detail_message_input',
  'compose_description_input',
  'devtool.scenarioUsers.username',
  'devtool.walletFunding.amount',
  'dispute_comment_field',
  'dm_onboarding_address_country_field',
  'dm_onboarding_address_field',
...
